# pigeon-msgs-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_dir}}/: README.md  pyproject.toml
{{cookiecutter.project_dir}}/.gihtub/workflows/: main.yaml
{{cookiecutter.project_dir}}/tests/: test_example.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  example.py
