[project]
name = "{{ cookiecutter.pypi_name }}"
version = "0.1.0"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" },
]
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pigeon-client",
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.entry-points."pigeon.msgs"]
msgs = "{{ cookiecutter.project_slug }}:topics"

[project.urls]
Homepage = "{{ cookiecutter.github_repository }}"
Repository = "{{ cookiecutter.github_repository }}"
Issues = "{{ cookiecutter.github_repository }}/issues"

[project.optional-dependencies]
test = [
  "pytest",
]
dev = [
  "bump-my-version",
]
